--- a/.github/workflows/release-inventory.yml
+++ b/.github/workflows/release-inventory.yml
@@ -4,10 +4,23 @@ on:
   release:
     types: [created]
   workflow_dispatch:
-  
+    inputs:
+      version:
+        description: 'Release version'
+        required: true
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - if: github.event_name == 'release'
+      name: Set release environment version
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+    - if: github.event_name == 'workflow_dispatch'
+      name: Set manual environment version
+      run: echo "RELEASE_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
   build:
-
+    needs: setup
     runs-on: ubuntu-latest
 
     steps:
@@ -16,10 +29,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
-    - name: Restore dependencies
+    - name: Restore
       run: dotnet restore src/Inventory.sln
-    - name: Set env
-      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Build
       run: dotnet build src/Inventory.sln --no-restore -c Release -p:Version=${{ env.RELEASE_VERSION }}
     - name: Test
