--- a/.github/workflows/release-inventory.yml
+++ b/.github/workflows/release-inventory.yml
@@ -18,6 +18,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
+        source-url: https://nuget.pkg.github.com/Ian-Mutch/index.json
+      env:
+        NUGET_AUTH_TOKEN: '%NUGET_AUTH_TOKEN%'
     - if: github.event_name == 'release'
       name: Set release environment version
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
@@ -30,26 +33,7 @@ jobs:
       run: dotnet build src/Inventory.sln --no-restore -c Release -p:Version=${{ env.RELEASE_VERSION }}
     - name: Test
       run: dotnet test src/Inventory.sln --no-build -c Release --verbosity normal
-    - name: Upload Nuget Packges to Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: nupkg
-        path: src/Inventory.ApiClient/bin/Release/*.nupkg
-        
-  prerelease:
-  
-    needs: build
-    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-latest
-    steps:
-    - name: Setup NuGet.exe for use with actions
-      uses: NuGet/setup-nuget@v1.0.5
-      with:
-        nuget-api-key: ${{ secrets.NUGET_PUSH_TOKEN }}
-        nuget-api-key-source: github "https://nuget.pkg.github.com/Ian-Mutch/index.json"
-    - name: Download Packages
-      uses: actions/download-artifact@v1
-      with:
-        name: nupkg
     - name: Push to GitHub Feed
-      run: nuget push "./nupkg/*.nupkg"
+      run: nuget push "./nupkg/*.nupkg" --no-symbols --skip-duplicate
+    env:
+        NUGET_AUTH_TOKEN: ${{ github.token }}
