--- a/.github/workflows/release-inventory.yml
+++ b/.github/workflows/release-inventory.yml
@@ -34,6 +34,6 @@ jobs:
     - name: Test
       run: dotnet test src/Inventory.sln --no-build -c Release --verbosity normal
     - name: Push to GitHub Feed
-      run: dotnet nuget push src/Inventory.ApiClient/bin/Release/*.nupkg --no-symbols --skip-duplicate
+      run: nuget.exe push "**/*.nupkg" -NoSymbols -SkipDuplicate
     env:
         NUGET_AUTH_TOKEN: ${{ github.token }}
