--- a/.github/workflows/release-inventory.yml
+++ b/.github/workflows/release-inventory.yml
@@ -14,26 +14,30 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
-        source-url: https://nuget.pkg.github.com/Ian-Mutch/index.json
-      env:
-        NUGET_AUTH_TOKEN: '%NUGET_AUTH_TOKEN%'
+        
     - if: github.event_name == 'release'
       name: Set release environment version
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      
     - if: github.event_name == 'workflow_dispatch'
       name: Set manual environment version
       run: echo "RELEASE_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+      
     - name: Restore
       run: dotnet restore src/Inventory.sln
+      
     - name: Build
       run: dotnet build src/Inventory.sln --no-restore -c Release -p:Version=${{ env.RELEASE_VERSION }}
+      
     - name: Test
       run: dotnet test src/Inventory.sln --no-build -c Release --verbosity normal
+      
     - name: Push to GitHub Feed
-      run: nuget.exe push "**/*.nupkg" -NoSymbols -SkipDuplicate
+      run: dotnet nuget push "**/*.nupkg" -k ${{ secrets.NUGET_PUSH_TOKEN }} -s "https://nuget.pkg.github.com/Ian-Mutch/index.json"
     env:
         NUGET_AUTH_TOKEN: ${{ github.token }}
