--- a/src/Inventory.ApiClient/Inventory.ApiClient.csproj
+++ b/src/Inventory.ApiClient/Inventory.ApiClient.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>TheVideoGameStore.Inventory.ApiClient</AssemblyName>
     <RootNamespace>TheVideoGameStore.Inventory.ApiClient</RootNamespace>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <PackageProjectUrl>https://github.com/Ian-Mutch/TheVideoGameStore.Inventory</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/Ian-Mutch/TheVideoGameStore.Inventory.git</PackageProjectUrl>
     <Description>Typed HttpClients for TheVideoGameStore Inventory microservice.</Description>
   </PropertyGroup>
 
