--- a/.github/workflows/release-inventory.yml
+++ b/.github/workflows/release-inventory.yml
@@ -19,29 +19,26 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
-        
+    
+    # If automated release
     - if: github.event_name == 'release'
       name: Set release environment version
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       
+    # Else if triggered manually
     - if: github.event_name == 'workflow_dispatch'
       name: Set manual environment version
       run: echo "RELEASE_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
-      
-    - name: Restore
-      run: dotnet restore src/Inventory.sln
-      
+
+    # Build with implicit restore
     - name: Build
       run: dotnet build src/Inventory.sln --no-restore -c Release -p:Version=${{ env.RELEASE_VERSION }}
       
     - name: Test
       run: dotnet test src/Inventory.sln --no-build -c Release --verbosity normal
       
-    - name: Authenticate
+    - name: Add Nuget Source
       run: dotnet nuget add source --username Ian-Mutch --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Ian-Mutch/index.json"
-      
-    - name: Pack
-      run: dotnet pack src/Inventory.ApiClient/Inventory.ApiClient.csproj -c Release --no-build --no-restore
-      
-    - name: Push to GitHub Feed
-      run: dotnet nuget push "**/*.nupkg" --source "github"
+
+    - name: Push to GitHub Nuget Feed
+      run: dotnet nuget push "**/*.nupkg" --api-key ${{ }} --source "github"
