--- a/.github/workflows/release-inventory.yml
+++ b/.github/workflows/release-inventory.yml
@@ -41,4 +41,4 @@ jobs:
       run: dotnet nuget add source --username Ian-Mutch --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Ian-Mutch/index.json"
 
     - name: Push to GitHub Nuget Feed
-      run: dotnet nuget push "**/*.nupkg" --api-key ${{ }} --source "github"
+      run: dotnet nuget push "**/*.nupkg" --api-key ${{ secrets.NUGET_PUSH_TOKEN }} --source "github"
