--- a/.github/workflows/release-inventory.yml
+++ b/.github/workflows/release-inventory.yml
@@ -10,16 +10,20 @@ on:
         required: true
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
+    - name: Checkout
     - uses: actions/checkout@v2
     
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v1.5.0
       with:
         dotnet-version: 6.0.x
-    
+        source-url: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
+      env:
+          NUGET_AUTH_TOKEN: '%NUGET_AUTH_TOKEN%'
+        
     # If automated release
     - if: github.event_name == 'release'
       name: Set release environment version
@@ -36,9 +40,8 @@ jobs:
       
     - name: Test
       run: dotnet test src/Inventory.sln --no-build -c Release --verbosity normal
-      
-    - name: Add Nuget Source
-      run: dotnet nuget add source --username Ian-Mutch --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Ian-Mutch/index.json"
 
     - name: Push to GitHub Nuget Feed
-      run: dotnet nuget push "**/*.nupkg" --api-key ${{ secrets.NUGET_PUSH_TOKEN }} --source "github"
+      run: dotnet nuget push "**/*.nupkg" --no-symbols --skip-duplicate
+      env:
+        NUGET_AUTH_TOKEN: ${{ github.token }}
