--- a/.github/workflows/release-inventory.yml
+++ b/.github/workflows/release-inventory.yml
@@ -42,5 +42,13 @@ jobs:
     - name: Test
       run: dotnet test src/Inventory.sln --no-build -c Release --verbosity normal
 
-    - name: Push to GitHub Nuget Feed
-      run: dotnet nuget push "**/*.nupkg" --no-symbols --skip-duplicate
+    #- name: Push to GitHub Nuget Feed
+     # run: dotnet nuget push "**/*.nupkg" --no-symbols --skip-duplicate
+      
+    - name: Publish nuget
+      run: |
+           for f in **.*nupkg
+           do
+             curl -vX PUT -u "[user]:${{ secrets.GITHUB_TOKEN }}" -F package=@$f https://nuget.pkg.github.com/Ian-Mutch/
+           done
+      shell: bash
