--- a/.github/workflows/release-inventory.yml
+++ b/.github/workflows/release-inventory.yml
@@ -21,9 +21,9 @@ jobs:
       with:
         dotnet-version: '6.0.x'
         include-prerelease: true
-        source-url: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
+        source-url: https://pkgs.dev.azure.com/ianmutch0535/_packaging/ianmutch0535/nuget/v3/index.json
       env:
-          NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NUGET_AUTH_TOKEN: ${{secrets.ADO_NUGET_AUTH}}
         
     # If automated release
     - if: github.event_name == 'release'
@@ -42,13 +42,5 @@ jobs:
     - name: Test
       run: dotnet test src/Inventory.sln --no-build -c Release --verbosity normal
 
-    #- name: Push to GitHub Nuget Feed
-     # run: dotnet nuget push "**/*.nupkg" --no-symbols --skip-duplicate
-      
-    - name: Publish nuget
-      run: |
-           for f in ./TheVideoGameStore.Inventory/bin/release/*.nupkg
-           do
-             curl -vX PUT -u "Ian-Mutch:${{ secrets.GITHUB_TOKEN }}" -F package=@$f https://nuget.pkg.github.com/Ian-Mutch/
-           done
-      shell: bash
+    - name: Publish Nuget to Azure Artifacts
+      run: dotnet nuget push src/Inventory.ApiClient/bin/Release/*.nupkg  --no-symbols --skip-duplicate
