--- a/.github/workflows/release-inventory.yml
+++ b/.github/workflows/release-inventory.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: '6.0.x'
         include-prerelease: true
-        source-url: https://pkgs.dev.azure.com/ianmutch0535/_packaging/ianmutch0535/nuget/v3/index.json
+        source-url: https://pkgs.dev.azure.com/ianmutch0535/TheVideoGameStore/_packaging/TheVideoGameStore/nuget/v3/index.json"
       env:
         NUGET_AUTH_TOKEN: ${{secrets.ADO_NUGET_AUTH}}
         
