--- a/.github/workflows/release-inventory.yml
+++ b/.github/workflows/release-inventory.yml
@@ -21,9 +21,9 @@ jobs:
       with:
         dotnet-version: '6.0.x'
         include-prerelease: true
-        source-url: https://pkgs.dev.azure.com/ianmutch0535/TheVideoGameStore/_packaging/TheVideoGameStore/nuget/v3/index.json"
+        source-url: ${{ secrets.ADO_NUGET_SOURCE }}
       env:
-        NUGET_AUTH_TOKEN: ${{secrets.ADO_NUGET_AUTH}}
+        NUGET_AUTH_TOKEN: ${{ secrets.ADO_NUGET_AUTH }}
         
     # If automated release
     - if: github.event_name == 'release'
