Initial commit of Domain/Infastructure projects Introduction of domain seed work and product aggregate models

--- a/src/directory.build.props
+++ b/src/directory.build.props
@@ -3,5 +3,6 @@
     <AssemblyName>TheVideoGameStore.$(MSBuildProjectName)</AssemblyName>
     <RootNamespace>TheVideoGameStore.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
     <TargetFramework>net6.0</TargetFramework>
+	<ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 </Project>
