--- a/src/Inventory.Api/Inventory.Api.csproj
+++ b/src/Inventory.Api/Inventory.Api.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.14.3" />
     <PackageReference Include="NSwag.MSBuild" Version="13.14.3">
@@ -11,9 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Inventory.Data.InMemory\Inventory.Data.InMemory.csproj" />
-    <ProjectReference Include="..\Inventory.Models\Inventory.Models.csproj" />
-    <ProjectReference Include="..\Inventory.Repositories\Inventory.Repositories.csproj" />
+    <ProjectReference Include="..\Inventory.Domain\Inventory.Domain.csproj" />
+    <ProjectReference Include="..\Inventory.Infastructure\Inventory.Infastructure.csproj" />
   </ItemGroup>
 
     <PropertyGroup>
