--- a/src/Inventory.Api/appsettings.json
+++ b/src/Inventory.Api/appsettings.json
@@ -14,5 +14,8 @@
       }
     ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Inventory": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Inventory"
+  }
 }
