Added UpdateProduct Command Added Unit Tests Added Validation

--- a/src/Inventory.Api/appsettings.Development.json
+++ b/src/Inventory.Api/appsettings.Development.json
@@ -4,6 +4,7 @@
       "Default": "Verbose",
       "Override": {
         "Microsoft": "Information",
+        "Microsoft.EntityFrameworkCode": "Information",
         "Microsoft.Hosting.Lifetime": "Information"
       }
     },
