--- a/src/Inventory.Api/appsettings.json
+++ b/src/Inventory.Api/appsettings.json
@@ -4,6 +4,7 @@
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
+        "Microsoft.EntityFrameworkCode": "Warning",
         "Microsoft.Hosting.Lifetime": "Information"
       }
     },
